--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,18 @@ h1{
 	font-family: helvetica;
 	color: red;
 }
+p{
+	text-align: center;
+	font-size: 25px;
+
+}
+body{
+	background-color: silver;
+}
+#jeu{
+	width: 600px;
+	height: 400px;
+	border: 2px black solid;
+	overflow: hidden;
+	position: relative;
+}
